--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-mdl": "^1.11.0",
+    "react-newline-to-break": "^1.0.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "serve": "^10.1.1"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
-  },
+  }
+    ,
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -27,5 +28,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "typescript": "^3.3.1"
+  }
 }
